[metadata]
name = resonator
description = Fit and analyze scattering parameter data from resonators
long_description = file: README.md
long_description_content_type = text/markdown
author = Daniel Flanigan
author_email = daniel.isaiah.flanigan@gmail.com
url = https://github.com/danielflanigan/resonator
version = 0.8.0

[options]
packages =
    resonator
install_requires =
    lmfit >= 0.9.3
    matplotlib >= 2
    numpy

[build_sphinx]
all-files = 1
source-dir = docs/source
build-dir = docs/build